# dvcdbg

./: .git-cliff.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  avr-atmega328p.json  build.rs
.github/: pull_request_template.md  size-history.csv
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: autofix.yml  docs.yml  merge.yml  release.yml
docs/: README.md  USAGE.md  USAGE_EXPLORE.md
docs/doc/dvcdbg/: all.html  index.html  macro.log.html  sidebar-items.js
docs/doc/dvcdbg/logger/: index.html  sidebar-items.js  struct.BufferedLogger.html  struct.NoopLogger.html  struct.SerialLogger.html  trait.Logger.html
docs/doc/dvcdbg/scanner/: fn.scan_i2c.html  fn.scan_i2c_with_ctrl.html  fn.scan_init_sequence.html  index.html  sidebar-items.js
examples/: size_check.rs
src/: cmd_debug.rs  error.rs  explorer.rs  lib.rs  logger.rs  macros.rs  prelude.rs  scanner.rs  workflow.rs
src/bridges/: arduino.rs
src/compat/: adapt.rs  ascii.rs  buffer.rs  err_compat.rs  i2c_compat.rs  mod.rs  serial.rs  serial_compat.rs  util.rs
src/explore/: explorer.rs  logger.rs  mod.rs  runner.rs
tests/: integration.rs
