[package]
name = "dvcdbg"
version = "0.1.1"
edition = "2024"
authors = ["p14c31355 <thinkoverheat@gmail.com>"]
description = "I2C scanner and logger for embedded, no_std use."
readme = "README.md"
repository = "https://github.com/p14c31355/dvcdbg"
documentation = "https://docs.rs/dvcdbg"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal", "no-std", "arduino", "i2c", "scanner"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = [
  "target/",
  ".github/",
]

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.8"

[features]
default = []
debug_log = []
