[package]
name = "dvcdbg"
version = "0.1.2"
edition = "2024"
authors = ["p14c31355 <thinkoverheat@gmail.com>"]
description = "Lightweight logging and diagnostics toolkit for embedded (no_std, I2C scan, quick tests)"
readme = "README.md"
repository = "https://github.com/p14c31355/dvcdbg"
documentation = "https://docs.rs/dvcdbg"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal", "no-std", "diagnostics", "i2c", "scanner"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = [
  "target/",
  ".github/",
]

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1"
heapless = "0.8.0"
embedded-io = "0.6.1"

[features]
default = ["logger", "scanner", "macros"]
logger = []
scanner = []
macros = []
quick_diag = ["logger", "scanner", "macros"]
