[package]
name = "dvcdbg"
version = "0.2.0"
edition = "2024"
authors = ["p14c31355 <thinkoverheat@gmail.com>"]
description = "Lightweight logging and diagnostics toolkit for embedded (no_std, I2C scan, quick tests)"
readme = "README.md"
repository = "https://github.com/p14c31355/dvcdbg"
documentation = "https://docs.rs/dvcdbg"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal", "no-std", "diagnostics", "i2c", "scanner"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = [
  "target/",
  ".github/",
]

[dependencies]
heapless = "0.9.1"
embedded-io = "0.6.1"
nb = { version = "1.1.0", optional = true }

embedded-hal-0_2 = { package = "embedded-hal", version = "0.2.7", optional = true }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0", optional = true }

[features]
default = ["logger", "scanner", "macros", "ehal_1_0"]

logger = []
scanner = []
macros = []

# HAL switching feature
ehal_0_2 = ["embedded-hal-0_2", "nb"]
ehal_1_0 = ["embedded-hal-1"]
